# enigma-admin-server

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  request.http
.github/: test.yml
.github/workflows/: checkout-lint-test.yml  push-docker-image.yml  rust-clippy.yml
jwt_token_signer/: index.js  package-lock.json  package.json  user.json
src/: auth.rs  handler.rs  lib.rs  main.rs  middleware.rs  mongo.rs  server.rs
src/handler/: experiment_create.rs  experiment_delete.rs  experiment_get.rs  experiment_list.rs  mod.rs
src/middleware/: auth.rs
src/repository/: experiment.rs
src/service/: experiment.rs  mod.rs  repo.rs
src/service/repo/: mod.rs  mongo.rs
