[package]
name = "enigma-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.5"
actix-service = "2.0.2"
async-trait = "0.1.52"
bson = { version = "2.0.0-beta.1", features = ["chrono-0_4"] }
chrono = {version = "0.4.19", features = ["serde"]}
dotenv = "0.15.0"
dyn-clone = "1.0"
env_logger = "0.9.0"
futures = "0.3.21"
mongodb = "2.0.1"
serde = "1"
serde_json = "1"
actix-web-httpauth = "0.5.1"
jsonwebtoken = "8.0.1"
log = "0.4"