[package]
name = "enigma-admin-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
anyhow = "1.0"
async-trait = "0.1.56"
bson = { version = "2.3.0", features = ["chrono-0_4"] }
chrono = {version = "0.4.19", features = ["serde"]}
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
futures-util = "0.3"
jsonwebtoken = "8.1.1"
mongodb = "2.2.2"
validator = { version = "0.15", features = ["derive"] }
mockall = "0.11.1"
dyn-clone = "1.0.6"
